--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,9 @@ footer{
 .morebtn{
   display: none;
 }
+.morebtnn{
+  display: none;
+}
 @media screen and (max-width:700px) {
   .sharebtn{
     display: none;
@@ -121,10 +124,23 @@ footer{
     display: block;
     Width :40px;
     Height : 40px ;
-    Top : 32px;
-    right: -300px;
+    Top : 46px;
+    left: 80%;
     position: relative;
   }
+  .morebtnn{
+    display: block;
+    Width :40px;
+    Height : 40px ;
+    Top : 9px;
+    left: 80%;
+    position: relative;
+    opacity: 0;
+  }
+  .morebtnn:hover{
+    opacity: 1;
+  }
+  
 }
 @media screen and (max-width:880px) {
   footer{
