--- a/src/index.css
+++ b/src/index.css
@@ -13,152 +13,185 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.linkstrees{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+
+.linkstrees {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.profile{
+
+.profile {
   align-items: center;
   text-align: center;
   margin-top: -50px;
 }
-a{
+
+a {
   text-decoration: none;
   text-align: center;
   padding: 24px 32px;
   background-color: #EAECF0;
   color: #101828;
   margin: 14px 10%;
-  Width :80%;
-  Height : 22px;
+  Width: 80%;
+  Height: 22px;
   border: 1px solid #EAECF0;
   border-radius: 8px;
 }
-a:hover{
+
+a:hover {
   background-color: #D0D5DD;
 }
-#profile__img{
+
+#profile__img {
   width: 88px;
   height: 88px;
   border-radius: 50%;
 }
-.profileimage1{
+
+.profileimage1 {
   position: relative;
   left: 46px;
 }
-.profileimage2{
+
+.profileimage2 {
   position: relative;
   right: 42px;
- opacity: 0; 
- transition: all 0.7 ease;
+  opacity: 0;
+  transition: all 0.7 ease;
 }
-.profileimage2:hover{
+
+.profileimage2:hover {
   opacity: 1;
 }
-.sharebtn{
-  Width :40px;
-  Height : 40px ;
-  Top : 32px;
-  right : -428px;
+
+.sharebtn {
+  Width: 40px;
+  Height: 40px;
+  Top: 32px;
+  right: -428px;
   position: relative;
 }
 
-.sharebtnn{
-  Width :240px;
+.sharebtnn {
+  Width: 240px;
   opacity: 0;
-  Height : 62px ;
-  Top : 51px;
-  right :-240px;
+  Height: 62px;
+  Top: 51px;
+  right: -240px;
   position: relative;
   transition: all 0.7 ease;
 }
-.sharebtnn:hover{
+
+.sharebtnn:hover {
   opacity: 1;
 }
-.socialIcons{
-  Width :100%;
-  Height : 70px;
+
+.socialIcons {
+  Width: 100%;
+  Height: 70px;
   justify-content: space-around;
   text-align: center;
 }
-.socialIcons img{
+
+.socialIcons img {
   width: 25px;
   height: 25px;
   margin: 20px;
 }
 
-footer{
+footer {
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 48px 0px;
   justify-content: space-between;
 }
-#footer1{
-  padding-left: 100px;
-  height: 200px;
-  width: 200px;
-}
-#footer2{
+
+#footer1 {
+  padding-left: 5%;
   height: 200px;
   width: 200px;
 }
 
-#footer3{
+#footer2 {
+  height: 200px;
+  width: 200px;
+}
+
+#footer3 {
   padding-right: 100px;
   height: 200px;
   width: 200px;
 }
-.morebtn{
+
+.morebtn {
   display: none;
 }
-.morebtnn{
+
+.morebtnn {
   display: none;
 }
+
+@media screen and (max-width:800px) {
+  footer{
+    grid-template-columns: repeat(3, 2fr);
+    column-gap: 10%;
+  }
+}
+
 @media screen and (max-width:700px) {
-  .sharebtn{
+  .sharebtn {
     display: none;
   }
-  .sharebtnn{
+
+  .sharebtnn {
     display: none;
   }
-  .morebtn{
+
+  .morebtn {
     display: block;
-    Width :40px;
-    Height : 40px ;
-    Top : 46px;
+    Width: 40px;
+    Height: 40px;
+    Top: 46px;
     left: 80%;
     position: relative;
   }
-  .morebtnn{
+
+  .morebtnn {
     display: block;
-    Width :40px;
-    Height : 40px ;
-    Top : 9px;
+    Width: 40px;
+    Height: 40px;
+    Top: 9px;
     left: 80%;
     position: relative;
     opacity: 0;
   }
-  .morebtnn:hover{
+
+  .morebtnn:hover {
     opacity: 1;
   }
-  
+
 }
-@media screen and (max-width:880px) {
-  footer{
+
+@media screen and (max-width:700px) {
+  footer {
     display: flex;
     flex-direction: column;
     justify-items: left;
     align-items: flex-start;
     padding-left: 10%;
   }
-  #footer1 ,  #footer2 ,  #footer3  {
+
+  #footer1,
+  #footer2,
+  #footer3 {
     height: 60px;
     padding: 0;
     margin: 0;
   }
 }
-.slack{
+
+.slack {
   display: none;
 }
