--- a/src/index.css
+++ b/src/index.css
@@ -180,7 +180,8 @@ footer {
     flex-direction: column;
     justify-items: left;
     align-items: flex-start;
-    padding-left: 10%;
+    padding-left: 15%;
+    padding-right: 15%;
   }
 
   #footer1,
