--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,8 +1,9 @@
-.contact {
-    color: #475467;
+.contactpage__container{
+    padding: 0 25%;
 }
-.section {
-  padding: 6rem 0 2rem;
+.contactpage{
+    color: #475467;
+    width: 100%;
 }
 
 .contact__title {
@@ -64,6 +65,7 @@ input {
     font-size: 1.1rem;
     color: #475467;
     margin-top: .4rem;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
 }
 
 .none::-webkit-resizer {
@@ -186,7 +188,6 @@ label {
     .contact__checkbox  {
         width: 400px;
         font-size: 13px;
-        color: blue;
     }
     .contact{
         padding-left: 20px;
@@ -194,5 +195,7 @@ label {
     }
 }
 .text-danger{
+    margin-left: 10px;
     color: rgb(239, 137, 137);
 }
+
