--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -190,8 +190,7 @@ label {
         font-size: 13px;
     }
     .contact{
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-right: 3rem;
     }
 }
 .text-danger{
