--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,8 @@ footer {
   }
 }
 
+
+
 @media screen and (max-width:700px) {
   .sharebtn {
     display: none;
@@ -180,7 +182,7 @@ footer {
     flex-direction: column;
     justify-items: left;
     align-items: flex-start;
-    padding-left: 15%;
+    padding-left: 33%;
     padding-right: 15%;
   }
 
@@ -192,7 +194,11 @@ footer {
     margin: 0;
   }
 }
-
+/* @media screen and (max-width:375) {
+  footer{
+    padding-left: 120px !important;
+  }
+} */
 .slack {
   display: none;
 }
